--- a/gowizard/Makefile
+++ b/gowizard/Makefile
@@ -3,6 +3,7 @@ include $(GOROOT)/src/Make.$(GOARCH)
 TARG=gowizard
 GOFILES=\
 	main.go\
+	metadata.go\
 	template.go\
 
 include $(GOROOT)/src/Make.cmd
