--- a/gowizard/Makefile
+++ b/gowizard/Makefile
@@ -1,4 +1,4 @@
-// Copyright 2010, The 'goWizard' Authors.  All rights reserved.
+// Copyright 2010, The 'gowizard' Authors.  All rights reserved.
 // Use of this source code is governed by the Simplified BSD License
 // that can be found in the LICENSE file.
 
