--- a/gowizard/Makefile
+++ b/gowizard/Makefile
@@ -1,6 +1,6 @@
-// Copyright 2010, The 'gowizard' Authors.  All rights reserved.
-// Use of this source code is governed by the Simplified BSD License
-// that can be found in the LICENSE file.
+# Copyright 2010, The 'gowizard' Authors.  All rights reserved.
+# Use of this source code is governed by the Simplified BSD License
+# that can be found in the LICENSE file.
 
 include $(GOROOT)/src/Make.$(GOARCH)
 
