Updated licenses headers

--- a/gowizard/Makefile
+++ b/gowizard/Makefile
@@ -18,3 +18,8 @@ data:
 	[ -d $(GOROOT)/lib/$(TARG) ] || mkdir $(GOROOT)/lib/$(TARG)
 	cp -R ../data/* $(GOROOT)/lib/$(TARG)/
 
+install: install-default data clean
+
+install-default:
+	mv $(TARG) $(GOBIN)/$(TARG)
+
