The copy of data is separated of install

--- a/gowizard/Makefile
+++ b/gowizard/Makefile
@@ -23,7 +23,7 @@ data:
 	[ -d $(GOROOT)/lib/$(TARG) ] || mkdir $(GOROOT)/lib/$(TARG)
 	cp -R ../data/* $(GOROOT)/lib/$(TARG)/
 
-install: install-default data clean
+install: install-default
 
 install-default:
 	mv $(TARG) $(GOBIN)/$(TARG)
